# WeHelp-Assignment-2024

./: README.md
Week1/: index.html  script.js
Week1/styles/: style.css
Week2/: index.html  week2.js  week2.py
Week3/Task1/: Task1.py  mrt.csv  spot.csv
Week3/Task2/: Task2.py  article.csv
Week3/Task3/: Task3.js  index.html  script.js
Week3/Task3/styles/: style.css  style.css.map
Week3/Task4/: Task4.js  index.html  test.js
Week3/Task4/Test/: test.js
Week3/Task4/Test/styles/: style.css
Week3/Task4/Version2/: Verson2.js
Week3/Task4/Verson2/: index.html
Week3/Task4/Verson2/styles/: style.css
Week3/Task4/styles/: style.css
Week4/: server.py
Week4/static/: script.js  style.css
Week4/templates/: error.html  index.html  member.html  square.html
Week5/: README.md  data.sql
Week6/: .gitignore  pyproject.toml  server.py
Week6/static/: script.js  script2.js  style.css
Week6/templates/: error.html  index.html  member.html
Week7/: .gitignore  database.py  pyproject.toml  server.py
Week7/static/: member2.js  script.js  style.css
Week7/templates/: error.html  index.html  member.html  welcome.html
